Adding Aboutme Page

--- a/WebSite/templates/about.html
+++ b/WebSite/templates/about.html
@@ -6,5 +6,35 @@
 
 
 {% block main %}
-<h1>About</h1>
+<h3>About Me</h3>
+<div class="w3-content w3-container" style="float: left;">
+    <div class="w3-col m6 w3-container", style="text-align: center;">
+        <img src="../static/mountains.jpg" class="w3-image w3-round" style="width:100%">
+        <span class="caption">Hiking in New Hampshire</span>
+    </div>
+    <div class="w3-col m6 w3-section"style="width:100%">
+        <p>
+            Quantitative Analyst at Citigroup
+            <br>
+            Love hiking and cycling.
+            <br>
+            MS in Computational Finance at Carnegie Mellon University
+            <br>
+            BS in Mathematics and Economics at Nanyang Technological University
+            <br>
+            Feel free to connect me:
+        </p>
+        <a href ="https://www.linkedin.com/in/yanxiong-michael-liu-cfa-1673177b/" style="text-decoration: none;">
+            <i class="fab fa-linkedin-in fa-3x"></i>
+        </a>
+        &nbsp;
+        <a href ="https://github.com/MikeLiu1992/" style="text-decoration: none;">
+            <i class="fab fa-github fa-3x"></i>
+        </a>
+        &nbsp;
+        <a href = "mailto: liuyanxiong2012@gmail.com"style="text-decoration: none;">
+            <i class="fas fa-envelope fa-3x"></i>
+        </a>
+    </div>
+</div>
 {% endblock %}
