--- a/WebSite/templates/layout.html
+++ b/WebSite/templates/layout.html
@@ -21,6 +21,8 @@
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
 </script>
 
+<script src="https://kit.fontawesome.com/22177322ac.js" crossorigin="anonymous"></script>
+
 <body>
 
 <!-- Sidebar -->
