--- a/WebSite/templates/layout.html
+++ b/WebSite/templates/layout.html
@@ -27,7 +27,7 @@
 
 <!-- Sidebar -->
 <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:10%">
-  <a href="/"style="text-decoration: none;"><h3 class="w3-bar-item">Quant Note</h3></a>
+  <a href="/"style="text-decoration: none;"><h3 class="w3-bar-item">Topics</h3></a>
   <a href="/" class="w3-bar-item w3-button">Home</a>
   <a href="avx-performance" class="w3-bar-item w3-button">C++ Vectorization</a>
   <a href="hpc-vector" class="w3-bar-item w3-button">HPC Vector</a>
@@ -42,6 +42,8 @@
       <a href="markov-process" class="w3-bar-item w3-button">Markov Process</a>
       <a href="gaussian-process" class="w3-bar-item w3-button">Gaussian Process</a>
       <a href="stationary-process" class="w3-bar-item w3-button">Stationary</a>
+      <a href="stochastic-calculus" class="w3-bar-item w3-button">Stochastic Calculus</a>
+      <a href="levy-process" class="w3-bar-item w3-button">Levy Process</a>
     </div>
   </div> 
   <a href="about" class="w3-bar-item w3-button">About</a>
