Rewrite the code to python for deployment convenience

--- a/WebSite/templates/layout.html
+++ b/WebSite/templates/layout.html
@@ -23,6 +23,10 @@
 
 <script src="https://kit.fontawesome.com/22177322ac.js" crossorigin="anonymous"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.47.0/codemirror.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.47.0/codemirror.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.47.0/mode/python/python.min.js"></script>
+
 <body>
 
 <!-- Sidebar -->
