Adding Vol Surface and Vol process

--- a/WebSite/templates/index.html
+++ b/WebSite/templates/index.html
@@ -6,7 +6,7 @@
 
 
 {% block main %}
-<p>I have listed some intersting quant topic here from stochastic calculus to high performance computing.</p>
+<p>I have listed some intersting quant topic here from stochastic calculus to high performance computing, some brain teasers and coding questions are also listed here.</p>
 <ul>
     <li><a href="avx-performance">C++ Vectorization</a></li>
     <li><a href="hpc-vector">HPC Vector</a></li>
@@ -20,6 +20,12 @@
         <li><a href="stationary-process">Stationary</a></li>
         <li><a href="stochastic-calculus">Stochastic Calculus</a></li>
         <li><a href="levy-process">Levy Process</a></li>
+    </ul>
+    <li>Volatility Modelling:</li>
+    <ul>
+        <li><a href="volatility-process">Volatility Process</a></li>
+        <li><a href="volatility-curve">Volatility Curve</a></li>
+        <li><a href="volatility-term">Volatility Term Structure</a></li>
     </ul>
     <li><a href="about">About</a></li>
 </ul>
