--- a/WebSite/templates/layout.html
+++ b/WebSite/templates/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Quant Note</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +27,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.47.0/codemirror.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.47.0/codemirror.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.47.0/mode/python/python.min.js"></script>
-
+<script data-ad-client="ca-pub-7314044552463525" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
 <body>
 
 <!-- Sidebar -->
@@ -49,7 +51,17 @@
       <a href="stochastic-calculus" class="w3-bar-item w3-button">Stochastic Calculus</a>
       <a href="levy-process" class="w3-bar-item w3-button">Levy Process</a>
     </div>
-  </div> 
+  </div>
+  <div class="w3-dropdown-hover">
+    <button class="w3-button">Volatility Modelling
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="w3-dropdown-content w3-bar-block">
+      <a href="volatility-process" class="w3-bar-item w3-button">Volatility Process</a>
+      <a href="volatility-curve" class="w3-bar-item w3-button">Volatility Curve</a>
+      <!--a href="volatility-term" class="w3-bar-item w3-button">Volatility Term</a-->
+    </div>
+  </div>  
   <a href="about" class="w3-bar-item w3-button">About</a>
 </div>
 
